# saidkick

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
docs/: deploy.md  design.md  develop.md  index.md  user-guide.md
docs/plans/: 2026-04-21-find-press-screenshot.md  2026-04-21-hardening-roadmap.md  2026-04-21-navigation-wait-text.md  2026-04-21-tab-management.md
docs/specs/: 2026-04-21-0.5.0-axtree-and-privacy-design.md  2026-04-21-find-press-screenshot-design.md  2026-04-21-navigation-wait-text-design.md  2026-04-21-tab-management-design.md
src/saidkick/: cli.py  client.py  server.py
src/saidkick/extension/: background.js  content.js  main_world.js  manifest.json  popup.html  popup.js
tests/: test_error_taxonomy.py  test_find.py  test_locators.py  test_navigate_open.py  test_press.py  test_saidkick.py  test_saidkick_e2e.py  test_saidkick_enhanced.py  test_screenshot.py  test_scroll_highlight.py  test_tabs.py  test_text.py  test_wait_ms.py
tests/assets/: test.html
