[project]
name = "saidkick"
version = "0.4.0"
description = "Remote browser inspection and automation tool."
authors = [
    { name = "Alejandro", email = "apiad@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
saidkick = "saidkick.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: End-to-end tests requiring a browser",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
